src/index.css
@font-face {
	font-family: 'Quicksand';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src: url(./assets/quicksand.woff2) format("woff2");
	unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB
}

@font-face {
	font-family: 'Quicksand';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src: url(./assets/quicksand.woff2) format("woff2");
	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
}

@font-face {
	font-family: 'Quicksand';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src: url(./assets/quicksand.woff2) format("woff2");
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
}

* {
	box-sizing: border-box;
	font-family: "Quicksand", sans-serif;
}

html,
body,
#root {
	padding: 0;
	margin: 0;
	min-height: 100%;
	background: black
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
	margin: 0;
	color: white;
}

/* header */
nav {
	position: sticky;
	top: 0;

	display: flex;
	place-content: space-between;

	padding: 1rem;
	gap: 1rem;

	background-color: #374a53;
	color: white;
}

nav p,
nav h1 {
	display: flex;
	align-items: center;
}

nav div p {
	justify-content: end;
}

nav.correct {
	background-color: #006140;
}

nav.incorrect {
	background-color: #e2393a;
}

@media screen and (max-width: 767px) {
	nav {
		flex-direction: column;
	}
}

/* main */
section {
	max-width: 1500px;
	margin: 0 auto;
}

.cat-catalogue {
	display: flex;
	flex-flow: wrap;
	justify-content: center;

	gap: 1rem;

	padding: 1rem;
}

/* cat image */
.cat-box {
	position: relative;

	margin: 0;
	border: 2px cyan solid;
	border-radius: 10px;

	overflow: hidden;
	cursor: pointer;
}

.fade-in {
	animation-name: cssAnimation;
	animation-duration: 1s;
	opacity: 0;
	animation-fill-mode: forwards;
	animation-timing-function: ease-in;
}

@keyframes cssAnimation {
	to {
		opacity: 1;
	}
}

.cat-image {
	display: block;
	box-sizing: content-box;
}

.cat-box:hover .cat-image {
	opacity: .7;
}

figure:hover .cat-description {
	display: flex;
	justify-content: center;
	align-items: center;

	position: absolute;
	bottom: 0;

	width: 100%;
	height: 100%;
}

figure .cat-description {
	display: none;
}

.click-text {
	padding: 0.5rem;

	background-color: black;
	color: white;

	border: 2px cyan solid;
	border-radius: 10px;
}

